--- a/admin/app/views/fronts.scala.html
+++ b/admin/app/views/fronts.scala.html
@@ -8,20 +8,18 @@
         <header>
             <div class="tool-title">Collections Editor</div>
             <div class="list-picker">
-                <span data-bind="with: $root.selectedBlock()">
-                    <a href="#" data-bind="click: $root.displayAllEditions">View in all editions &raquo;</a>
-                </span>
+                <span class="list-picker__title">Choose collections:</span>
 
-                <span class="list-picker__title">Collections:</span>
+                <select data-bind="options: editions, value: edition, optionsCaption: 'edition...'"></select>
 
-                <select data-bind="options: editions, value: selectedEdition, optionsCaption: 'choose edition...'"></select>
+                <select data-bind="options: sections, value: section, enable: edition, optionsCaption: 'section...'"></select>
 
-                <select data-bind="options: sections, value: selectedSection, enable: selectedEdition, optionsCaption: 'choose section...'"></select>
+                <select data-bind="options: blocks, value: block, enable: section, optionsCaption: 'all collections'"></select>
 
-                <select data-bind="options: blocks, value: selectedBlock, enable: selectedSection, optionsCaption: 'show all'"></select>
-
-                <button data-bind="enable: selectedSection, click: showSelectedBlocks">OK</button>
-                <button data-bind="click: clearAll">Clear</button>
+                <button class="strong" data-bind="enable: section, click: actions.displaySelectedBlocks">Show</button>
+                <button data-bind="enable: block,   click: actions.displayInAllEditions">in all editions</button>
+                &middot;
+                <button data-bind="enable: listsDisplayed().length, click: actions.clearAll">Hide all</button>
             </div>
         </header>
 
@@ -51,7 +49,7 @@
                 <div class="list-header">
                     <i class="icon-cog icon-white list-tool" data-bind="click: toggleEditingConfig"></i>
 
-                    <a data-bind="click: $parent.dropList" class="list-header__hide" title="Hide this block">HIDE</a>
+                    <a data-bind="click: $root.actions.dropList" class="list-header__hide" title="Hide this block">HIDE</a>
                     <div class="list-header__title" data-bind="foreach: crumbs">
                         <span class="list-header__title__part" data-bind="text: $data"></span> 
                     </div>
