--- a/admin/public/css/style.css
+++ b/admin/public/css/style.css
@@ -365,11 +365,12 @@ a.cta, .cta a {
 
 .fronts header {
     background-color: #ccc;
-    padding: 7px 5px 5px 10px;
+    padding: 5px 5px 5px 10px;
     overflow: auto;
 }
 
 .fronts header .tool-title {
+    margin: 7px 0 0 0;
     float: left;
 }
 
@@ -657,12 +658,17 @@ a.cta, .cta a {
 }
 
 .fronts select {
+    height: 30px;
     width: 125px;
-    margin: -2px 0 0 0;
+    margin: 0;
 }
 
 .fronts select:disabled {
     opacity: 0.5;
+}
+
+.fronts button {
+    height: 30px;
 }
 
 .fronts .strong {
