--- a/identity/app/views/reset_password.scala.html
+++ b/identity/app/views/reset_password.scala.html
@@ -5,22 +5,23 @@
 
 @main(page, Switches.all){
 }{
-<form class="form" novalidate action="@idUrlBuilder.buildUrl("/reset-password", idRequest)/@token"  method="post">
+<div class="identity-wrapper">
+    <h1>Please enter your new password</h1>
+    <form class="form" novalidate action="@idUrlBuilder.buildUrl("/reset-password", idRequest)/@token"  method="post">
 
-    <p> Please supply your new password </p>
+        @if(resetPasswordForm.globalError.isDefined) {
+            <div class="form-field__error text-input__note">@resetPasswordForm.globalErrors.map(_.message).mkString(", ")</div>
+        }
 
-    @if(resetPasswordForm.globalError.isDefined) {
-        <div class="form-field__error text-input__note">@resetPasswordForm.globalErrors.map(_.message).mkString(", ")</div>
-    }
-    <ul class="form-fields">
-        @idInputPassword(resetPasswordForm("password"), '_label -> "Password")
-        @idInputPassword(resetPasswordForm("password_confirm"), '_label -> "Confirm Password")
+        <ul class="form-fields">
 
-        <li>
-            <button type="submit" class="submit-input">Submit</button>
-        </li>
-    </ul>
+            @idInputPassword(resetPasswordForm("password"), '_label -> "New Password", '_help -> "Between 6 and 20 characters")
+            @idInputPassword(resetPasswordForm("password_confirm"), '_label -> "Repeat password")
 
-
-</form>
+            <li>
+                <button type="submit" class="submit-input">Save password</button>
+            </li>
+        </ul>
+    </form>
+</div>
 }
