--- a/identity/app/views/reset_password_confirmation.scala.html
+++ b/identity/app/views/reset_password_confirmation.scala.html
@@ -3,12 +3,16 @@
 @main(page, Switches.all){
 }{
 
-@state match {
+<div class="identity-wrapper">
+    @state match {
         case "reset" => {
             <p>Your password has been changed. Click <a href="/signin">here</a> to signin.</p>
         }
         case "email" => {
-            <p>We have sent an email to @emailAddress</p>
+            <h1>Now check your email</h1>
+            <p>We've sent an email to @emailAddress.
+            <br>Follow the link in the email to reset your password.</p>
         }
-}
+    }
+</div>
 }
