--- a/common/app/assets/stylesheets/module/_forms.scss
+++ b/common/app/assets/stylesheets/module/_forms.scss
@@ -89,7 +89,7 @@ label,
     font-family: $sans-serif;
     font-size: 12px;
     font-size: 1.2rem;
-    margin-top: $baseline*3;
+    margin-bottom: $baseline*3;
 }
 
 .check-list label,
