--- a/article/app/views/fragments/articleBody.scala.html
+++ b/article/app/views/fragments/articleBody.scala.html
@@ -62,7 +62,7 @@
         </div>
 
         @if(storyPackage.nonEmpty) {
-            @fragments.cards.card(storyPackage.head, "right", "More on this story", "Story package card")
+            @fragments.cards.card(storyPackage.last, "right", "More on this story", "Story package card")
         }
 
     </article>
