--- a/admin/app/views/radiator.scala.html
+++ b/admin/app/views/radiator.scala.html
@@ -14,7 +14,10 @@
         <header>
             <span id="logo">the<span class="white">guardian</span>.com dashboard</span>
         </header>
-        
+
+        <h2>Pageviews <!--small>(in the last minute)</small--></h2>
+        <div id="pageviews"></div>
+
         <h2>Pingdom <small>(external monitoring of our host names)</small></h2>
         <ul id="pingdom"></ul>
         
