--- a/common/app/views/fragments/cards/card.scala.html
+++ b/common/app/views/fragments/cards/card.scala.html
@@ -13,7 +13,7 @@
                 />
             }
         }
-        <div class="card__body u-text-hyphenate zone-@trail.sectionName">
+        <div class="card__body u-text-hyphenate zone-@trail.section">
             <h3 class="card__zone zone-color">@trail.sectionName</h3>
             <h3 class="card__headline">@trail.headline</h3>
         </div>
