--- a/identity/app/views/password/reset_password.scala.html
+++ b/identity/app/views/password/reset_password.scala.html
@@ -1,13 +1,16 @@
-@(page: MetaData, idRequest: services.IdentityRequest, idUrlBuilder: services.IdentityUrlBuilder, resetPasswordForm: Form[(String, String)], token : String)(implicit request: RequestHeader )
+@(page: MetaData, idRequest: services.IdentityRequest, idUrlBuilder: services.IdentityUrlBuilder, resetPasswordForm: Form[(String, String, String)], token : String)(implicit request: RequestHeader )
 
-@import views.html.fragments.form.idInputPassword
+@import views.html.fragments.form.{idInputPassword,idInputHidden}
 @import form.IdFormHelpers._
+
+@emailAddress = @{ resetPasswordForm("email_address").value }
+
 
 @main(page, Switches.all){
 }{
 <form class="form" novalidate action="@idUrlBuilder.buildUrl("/reset-password", idRequest)/@token"  method="post">
 
-    <p> Please supply your new password </p>
+    <p> Please supply your new password for @emailAddress </p>
 
     @if(resetPasswordForm.globalError.isDefined) {
         <div class="form-field__error text-input__note">@resetPasswordForm.globalErrors.map(_.message).mkString(", ")</div>
@@ -15,6 +18,7 @@
     <ul class="form-fields">
         @idInputPassword(resetPasswordForm("password"), '_label -> "Password")
         @idInputPassword(resetPasswordForm("password_confirm"), '_label -> "Confirm Password")
+        <input type="hidden" value="@emailAddress" name="email_address"/>
 
         <li>
             <button type="submit" class="submit-input">Submit</button>
