--- a/static/src/javascripts/projects/common/views/commercial/creatives/revealer.html
+++ b/static/src/javascripts/projects/common/views/commercial/creatives/revealer.html
@@ -1,5 +1,5 @@
 <aside class="creative creative--revealer">
-    <a class="creative__cta" href="%%CLICK_URL_ESC%%<%=link%>" target="_blank">
+    <a class="creative__cta" href="%%CLICK_URL_UNESC%%<%=link%>" target="_blank">
         <img class="creative__background" src="<%=backgroundImage%>" alt>
         <img class="creative__button creative__button--<%=buttonVPos%> creative__button--<%=buttonHPos%>" src="<%=button%>" alt>
     </a>
