logos info font styles fixed

--- a/static/src/stylesheets/module/content/_content.scss
+++ b/static/src/stylesheets/module/content/_content.scss
@@ -764,6 +764,11 @@
             }
         }
 
+        .brandbadge__header,
+        .brandbadge__help {
+            color: $neutral-2;
+        }
+
         .most-viewed-container--media,
         .meta__number {
             .inline-icon {
