Add a min-width constraint to the revealer slot

--- a/static/src/stylesheets/module/_adslot.scss
+++ b/static/src/stylesheets/module/_adslot.scss
@@ -636,6 +636,10 @@
     min-height: 250px;
 }
 
+.ad-slot--revealer {
+    min-width: 300px;
+}
+
 .ad-slot--fabric-v1,
 .ad-slot--fluid250 {
     width: auto;
