--- a/common/app/views/fragments/richLinkDefault.scala.html
+++ b/common/app/views/fragments/richLinkDefault.scala.html
@@ -1,4 +1,7 @@
 @(title: String, href: String)
+
+@import views.html.fragments.inlineSvg
+
 <div class="rich-link">
 
     <div class="rich-link__container">
@@ -9,7 +12,7 @@
 
     <div class="rich-link__read-more">
         <div class="rich-link__arrow">
-            <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g fill="#005689" fill-rule="evenodd"><path class="rich-link__arrow-icon" d="m12 0c-6.627 0-12 5.373-12 12 0 6.627 5.373 12 12 12 6.627 0 12-5.373 12-12 0-6.627-5.373-12-12-12m.21 19l-.637-.668 4.888-6.326h-11.465v-1.01h11.465l-4.888-6.333.637-.668 6.79 7.158v.685l-6.79 7.157"/></g></svg>
+            @inlineSvg("arrow-in-circle", "icon")
         </div>
         <div class="rich-link__read-more-text">
             Read more
