--- a/common/app/views/fragments/analytics/google.scala.html
+++ b/common/app/views/fragments/analytics/google.scala.html
@@ -91,7 +91,7 @@
             if (referrerVars && referrerVars.value) {
                 var d = new Date().getTime();
                 if (d - referrerVars.value.time < 60 * 1000) { // One minute
-                    ga('guardianTestPropertyTracker.send', 'event', 'Click', 'Internal', referrerVars.value.tag, {
+                    ga('@{trackerName}.send', 'event', 'Click', 'Internal', referrerVars.value.tag, {
                         dimension12: referrerVars.value.path
                     });
                 }
