Radiator: add link to aws billing console

--- a/admin/app/views/radiator.scala.html
+++ b/admin/app/views/radiator.scala.html
@@ -29,7 +29,7 @@
 
     <header>
         <span id="logo">the<span class="white">guardian</span>.com dashboard</span>
-        <div class="cost"><strong>$@cost.max.toLong</strong> this month</div>
+        <div class="cost"><a href="https://console.aws.amazon.com/billing/home"><strong>$@cost.max.toLong</strong> this month</a></div>
     </header>
 
     <div class="pingdom-wrapper">
