--- a/admin/public/css/radiator.css
+++ b/admin/public/css/radiator.css
@@ -98,7 +98,7 @@ li.Not.running {
     background-color: lightgrey;
 }
 
-h2, .cost {
+h2, .cost a {
     font-family: Georgia, serif;
     color: #999;
     clear: both;
