--- a/common/app/views/fragments/amp/stylesheets/liveBlog.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/liveBlog.scala.html
@@ -249,6 +249,7 @@
     position: relative;
     display: inline-block;
     box-sizing: border-box;
+    cursor: pointer;
     overflow: hidden;
     height: 36px;
     width: auto;
@@ -271,6 +272,7 @@
     display: inline-block;
     font-weight: 700;
     float: right;
+    line-height: 36px;
     opacity: 1;
     padding-left: 25px;
     transition: opacity .3s ease-in-out;
