Ensure the button doesn't have border or background

--- a/common/app/views/fragments/amp/stylesheets/liveBlog.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/liveBlog.scala.html
@@ -232,6 +232,8 @@
 
 .toast__space-reserver {
     height: 36px;
+    border: 0 none;
+    background: transparent;
     margin-bottom: -36px;
     display: block;
 }
