Reserve space for comments and save for later

--- a/common/app/views/fragments/contentMeta.scala.html
+++ b/common/app/views/fragments/contentMeta.scala.html
@@ -39,7 +39,7 @@
                 }
             </div>
 
-            <div class="meta__numbers modern-visible">
+            <div class="meta__numbers">
                 <div class="u-h meta__number js-sharecount">
                 </div>
                 <div class="u-h meta__number" data-discussion-id="@item.content.discussionId" data-commentcount-format="content" data-discussion-closed="@{
