--- a/static/src/stylesheets/module/content/_content.global.scss
+++ b/static/src/stylesheets/module/content/_content.global.scss
@@ -113,8 +113,7 @@
 }
 
 .meta__save-for-later {
-    // Shown with test
-    display: none;
+    height: 30px;
     padding-top: $gs-baseline / 2;
     padding-bottom: $gs-baseline / 2;
     margin-bottom: 0;
