--- a/admin/app/views/radiator.scala.html
+++ b/admin/app/views/radiator.scala.html
@@ -1,6 +1,7 @@
 @import conf.switches.Switch
-@(  charts: Seq[tools.AwsLineChart],
-    hitMissCharts: Seq[tools.AwsLineChart],
+@(  errorCharts: Seq[tools.AwsLineChart],
+    latencyCharts: Seq[tools.AwsLineChart],
+    fastlyCharts: Seq[tools.AwsLineChart],
     cost: tools.MaximumMetric,
     switches: Seq[conf.switches.Switch],
     env: String,
@@ -82,6 +83,15 @@
         </div>
     </div>
 
-    @charts.map{ chart => @fragments.lineChart(chart)  }
-    @hitMissCharts.map{ chart => @fragments.lineChart(chart) }
+    @graph_group("Errors", errorCharts)
+    @graph_group("Latencies", latencyCharts)
+    @graph_group("Fastly", fastlyCharts)
+}
+
+@graph_group(title: String, graphs: Seq[tools.AwsLineChart]) = {
+    <br clear="all"/>
+    <div>
+        <h2>@title</h2>
+        @graphs.map{ chart => @fragments.lineChart(chart) }
+    </div>
 }
