--- a/common/app/views/fragments/discussionFooter.scala.html
+++ b/common/app/views/fragments/discussionFooter.scala.html
@@ -9,8 +9,8 @@
             <h2 class="container__meta__title">comments <span class="discussion__comment-count js-discussion-comment-count"></span></h2>
 
             <p class="container__meta__item discussion__meta discussion__meta--open-signed-out">
-                <a class="u-underline" href="@Configuration.id.url/signin?INTCMP=DOTCOM_COMMENTS_SIGNIN@if(RegisterWithPhoneNumber.isSwitchedOn){&clientId=discussion"}>Sign in</a>
-                or <a class="u-underline" href="@Configuration.id.url/register?INTCMP=DOTCOM_COMMENTS_REG@if(RegisterWithPhoneNumber.isSwitchedOn){&clientId=discussion"}">create your Guardian account</a> to join the discussion.
+                <a class="u-underline" href="@Configuration.id.url/signin?INTCMP=DOTCOM_COMMENTS_SIGNIN@if(RegisterWithPhoneNumber.isSwitchedOn){&clientId=comments"}>Sign in</a>
+                or <a class="u-underline" href="@Configuration.id.url/register?INTCMP=DOTCOM_COMMENTS_REG@if(RegisterWithPhoneNumber.isSwitchedOn){&clientId=comments"}">create your Guardian account</a> to join the discussion.
             </p>
 
             <p class="container__meta__item discussion__meta discussion__meta--closed">This discussion is closed for comments.</p>
