--- a/static/src/stylesheets/module/commercial/_brandbadge.scss
+++ b/static/src/stylesheets/module/commercial/_brandbadge.scss
@@ -67,16 +67,17 @@
         color: $neutral-2-contrasted;
     }
 }
+
 .brandbadge--onside {
     padding-bottom: $gs-baseline * 2;
     border-bottom: 1px dotted $neutral-5;
 
     @include mq(tablet) {
-        float: left;
+        float: right;
     }
 
     @include mq(leftCol) {
-        float: none;
+        float: left;
         clear: left;
         width: $left-column;
         min-height: 0;
@@ -137,6 +138,15 @@
         }
     }
 }
+
+.content__main-column--article {
+    .brandbadge--onside {
+        @include mq(leftCol) {
+            float: none;
+        }
+    }
+}
+
 .brandbadge--interactive {
     width: 140px;
     min-height: 135px;
